various fixes
- Fix for message expiry in different time zones
- initialiseDonkySDK(application, apiKey, donkyListener) - will no
longer update the saved user/device details internally (this is to
initialise SDK with the same user details as previously). Method
initialiseDonkySDK(application, apiKey, userDetails,
deviceDetails,appVersion,  donkyListener) will still replace
registration details.
- fixed issue where log submission reason was not set.
- fixed issue when ui thread was blocked in one of the error callbacks
- added shared thread pool for modules
- additional features and local events in core (for new modules to be
added soon)